# oz312239FoCPSem1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  main.cpp  output.txt  proba  test
lab-01/: README.md
lab-02/: Comment.txt  Link2Tasks.txt  README.md  task1.cpp  task2.cpp  task3.cpp  type_limits.cpp
lab-03/: README.md  Tasks.cpp  loops.txt
lab-04/: Lab04.txt  README.md  Task4.cpp  Task4.txt  Task5.cpp  Task5.txt  Tasks1-3.cpp
lab-05/: Lab05.txt  README.md
lab-05/tasks/: equations.h  main.cpp  new_tasks.h  prng.h  vectors.h
lab-06/: Lab06.txt  LargeInputNumbers.txt  LoremIpsum.txt  README.md  echo.cpp  frequency.cpp  mean_std.cpp  random_numbers.cpp
lab-07/: CMakeLists.txt  Lab07.txt  README.md  complex.cpp  fib.cpp  hanoi.cpp  matrix.cpp  time.cpp  traingle.cpp  triangle.cpp
lab-07/complex/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
lab-07/fib/: CMakeLists.txt  fib.cpp  (+2 more)
lab-08/: Comment.txt  Lab08.txt  README.md  Ulysses.txt  counter.cpp  phrase_counter.cpp
lab-08/Teachers Solution/CountingTwoWords/: CMakeLists.txt  main.cpp  word_counter.cpp  word_counter.h
lab-08/Teachers Solution/Index/: CMakeLists.txt  main.cpp  word_index.cpp  word_index.h
lab-08/Teachers Solution/TextGenerator/: CMakeLists.txt  main.cpp  word_counter.cpp  word_counter.h
lab-09/: Lab04.txt  Lab09.txt  README.md  Task1-1.cpp  test1-1.txt
lab-10/: Lab-10.txt  README.md  Task1.cpp  g1.txt  g2.txt  g3.txt
lab-11/: CMakeLists.txt  Lab-11.txt  README.md  input3.txt  main.cpp  utils.cpp  utils.h
lab-12/: CMakeLists.txt  Lab-12.txt  README.md  main.cpp  output.txt  utils.cpp  utils.h
lab-13/: Lab-13.txt  README.md  input.txt  input2.txt
lab-14/: CMakeLists.txt  Lab.txt  README.md  bp.txt  main.cpp  nbp.txt  utils.cpp  utils.h
lab-15/: README.md
project/: CMakeLists.txt  errorMessages.cpp  errorMessages.h  geneticAlgorithm.cpp  geneticAlgorithm.h  input.txt  input1.txt  main.cpp  mapgen.cpp  output.txt  storages.cpp  utils.cpp  utils.h
(+62 files in other folders)
