cmake_minimum_required(VERSION 3.6.0)
project(focp VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

add_subdirectory(lab-07/complex)
add_subdirectory(lab-07/triangle)
add_subdirectory(lab-07/fib)
add_subdirectory(lab-07/hanoi)
add_subdirectory(lab-07/matrix)
add_subdirectory(lab-07/time)
add_subdirectory(lab-09/Task1)
add_subdirectory(lab-10/Task1)
add_subdirectory(lab-10/Task2)
add_subdirectory(lab-11)
add_subdirectory(project)